--- a/setting.html
+++ b/setting.html
@@ -6,7 +6,7 @@
 <title>Pacu Jalur Math Battle - Settings</title>
 
 <!-- CSS terpisah -->
-<link rel="stylesheet" href="../css/setting.css">
+<link rel="stylesheet" href="css/setting.css">
 </head>
 <body>
 
@@ -47,6 +47,6 @@
 <button id="startGameBtn">Start Game</button>
 
 <!-- JS terpisah -->
-<script src="../js/setting.js"></script>
+<script src="js/setting.js"></script>
 </body>
 </html>
