--- a/pacu_jalur.html
+++ b/pacu_jalur.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>Balap Perahu Edukasi</title>
-
+<title>Pacu Jalur Math Battle</title>
 <link rel="stylesheet" href="css/race.css">
 </head>
 
@@ -22,16 +21,18 @@
 
 <div id="winnerText"></div>
 <div id="questionCenter"></div>
+
 <div id="choicesRed"></div>
 <div id="choicesBlue"></div>
 
-<!-- Hamburger menu -->
+<!-- Hamburger -->
 <div id="hamburger">
     <div class="bar"></div>
     <div class="bar"></div>
     <div class="bar"></div>
 </div>
 
+<!-- Menu -->
 <div id="menuItems">
     <button id="menuHome">Home</button>
     <button id="menuRefresh">New Game</button>
