--- a/pacu_jalur.html
+++ b/pacu_jalur.html
@@ -9,8 +9,7 @@
 
 <body>
 
-<canvas id="fireworksCanvas"></canvas>
-
+<!-- GAME AREA -->
 <div id="track">
     <div class="wave"></div>
     <div class="wave2"></div>
@@ -19,26 +18,32 @@
     <div id="finishLine">FINISH</div>
 </div>
 
-<div id="winnerText"></div>
 <div id="questionCenter"></div>
-
 <div id="choicesRed"></div>
 <div id="choicesBlue"></div>
 
-<!-- Hamburger -->
+<!-- HAMBURGER -->
 <div id="hamburger">
     <div class="bar"></div>
     <div class="bar"></div>
     <div class="bar"></div>
 </div>
 
-<!-- Menu -->
+<!-- MENU -->
 <div id="menuItems">
     <button id="menuHome">Home</button>
     <button id="menuRefresh">New Game</button>
     <button id="menuSettings">Settings</button>
 </div>
 
+<!-- 🔥 OVERLAY KEMENANGAN (PALING BAWAH) -->
+<div id="winOverlay">
+  <canvas id="fireworksCanvas"></canvas>
+  <div id="winnerText"></div>
+  <button id="btnRestart">MAIN LAGI</button>
+</div>
+
+<audio id="winSound" src="sound/win.mp3"></audio>
 <script src="js/race.js"></script>
 </body>
 </html>
