--- a/pacu_jalur.html
+++ b/pacu_jalur.html
@@ -46,9 +46,10 @@
 <!-- OVERLAY KEMENANGAN -->
 <div id="winOverlay">
   <canvas id="fireworksCanvas"></canvas>
-  <div id="winnerText"></div>
+  <div id="winnerText">KAMU MENANG!</div>
   <button id="btnRestart">MAIN LAGI</button>
 </div>
+
 
 <audio id="winSound" src="sound/win.mp3"></audio>
 <script src="js/race.js"></script>
