--- a/setting.html
+++ b/setting.html
@@ -6,7 +6,7 @@
 <title>Pacu Jalur Math Battle - Settings</title>
 
 <!-- CSS terpisah -->
-<link rel="stylesheet" href="css/setting.css">
+<link rel="stylesheet" href="../css/setting.css">
 </head>
 <body>
 
@@ -36,7 +36,7 @@
     <div id="system-level-container">
       <label for="system-level">Level AI:</label>
       <select id="system-level">
-        <option value="beginner">Beginner</option>
+        <option value="beginner">Easy</option>
         <option value="medium">Medium</option>
         <option value="hard">Hard</option>
       </select>
@@ -47,6 +47,6 @@
 <button id="startGameBtn">Start Game</button>
 
 <!-- JS terpisah -->
-<script src="js/setting.js"></script>
+<script src="../js/setting.js"></script>
 </body>
 </html>
